fix low volume bleed

--- a/react-ui/src/styles/audioP2.css
+++ b/react-ui/src/styles/audioP2.css
@@ -30,8 +30,8 @@
   /* box-shadow: 4px 4px 0 rgb(239, 142, 248), 4px -4px 0 #25ff99, -4px 4px 0 #56caf8, -4px -4px 0 #56caf8, 4px 0px 0 #f7b867, 0px 4px 0 #dd4338, -4px 0px 0 #0c6fe9, 0px -4px 0 #f010e5; */
 }
 #pl2-audio {
-  /* height: 345px; */
   width: 100%;
+  /* height: 100px; */
   /* border: 1px solid rgb(0, 225, 255); */
   border-radius: 20px;
   margin: 0px 0px 0px 0px;
@@ -45,11 +45,12 @@
   /* box-shadow: 4px 4px 0 rgb(239, 142, 248), 4px -4px 0 #25ff99, -4px 4px 0 #56caf8, -4px -4px 0 #56caf8, 4px 0px 0 #f7b867, 0px 4px 0 #dd4338, -4px 0px 0 #0c6fe9, 0px -4px 0 #f010e5; */
 }
 .pl2-controls{
-  height: 100%;
+  height: 25px;
   width: 100%;
   display: flex;
   justify-content: space-evenly;
   align-items: center;
+  border: 1px solid pink;
 }
 #pl2-audio__volume {
   width: 25%;
@@ -73,14 +74,15 @@
   
 }
 #pl2-audio__top {
-  height: 20px;
+  height: 25px;
   width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
+  border: 1px solid blue;
 }
 #pl2-audio__top__song-name {
-  font-size: 15px;
+  font-size: 20px;
   font-family: 'Electrolize', sans-serif;
   font-weight: 900;
 }
@@ -96,6 +98,7 @@
   display: flex;
   justify-content: space-evenly;
   align-items: center;
+ 
 }
 .pl2-fast-forward{
   width: 20px;
@@ -124,16 +127,18 @@
   opacity: .4;
 }
 #pl2-audio__bottom {
-  height: 30%;
+  height: 25px;
   width: 100%;
   display: flex;
   justify-content: space-evenly;
   align-items: center;
   flex-flow: column;
+  border: 1px solid yellow;
+
 }
 .pl2-timer {
   width: 100%;
-  font-size: 30px;
+  font-size: 20px;
   font-family: 'Electrolize', sans-serif;
   font-weight: 900;
   display: flex;
@@ -143,11 +148,13 @@
 }
 #pl2-audio__bottom-c {
   width: 300px;
+  height: 50px;
   position: relative;
   display: flex;
   justify-content: space-evenly;
   align-items: center;
   flex-direction: column;
+  border: 1px solid rgb(0, 195, 255);
 }
 #pl2-timer-loop-random-c {
   height: 100%;
@@ -158,11 +165,14 @@
   
 }
 .pl2-random {
-  width: 15%;
+  height: 20px;
+  width: 20px;
   opacity: .4;
+  
 }
 .pl2-loop {
-  width: 15%;
+  height: 20px;
+  width: 20px;
   opacity: .4;
 }
 .pl2-random:hover ,
@@ -180,11 +190,13 @@
   position: relative;
 }
 .pl2-audio__bottom__playhead {
-  display: inline;
+  position: relative;
+  display: flex;
+  align-items: center;
   width: 300px;
-  height: 30px;
+  height: 25px;
   border: 1px solid rgb(0, 225, 255);
-  margin: 0px 0px 10px 0px;
+  margin: 0px 0px 0px 0px;
   border-radius: 10px;
   overflow: hidden;
   /* position: relative; */ 
@@ -199,10 +211,10 @@
 }
 .pl2-audio__bottom__playhead__time-remaining {
   /* color: rgb(202, 202, 202); */
-  font-size: 13px;
+  font-size: 20px;
   position: absolute;
-  top: -0px;
-  left: 250px;
+  /* top: -0px; */
+  right: 10px;
   font-family: 'Electrolize', sans-serif;
 
 }
@@ -479,8 +491,9 @@ div.volume-control img {
   /* margin-top: 70px; */
   /* margin-left: 146px; */
   transform: rotate(90deg);
-  border: 1px solid green;
+  /* border: 1px solid green; */
   pointer-events: none;
+  margin: 0px 10px;
 
 }
 .pl2-slider-input {
@@ -598,9 +611,9 @@ span.eq span.eq-level
   box-shadow: inset 0 5px 5px -3px rgba(255,255,255,0.4),
               inset 0 -8px 8px -3px rgba(0,0,0,0.4),
               inset 0 0 55px rgba(0,0,0,0.6),
-              -7px 0 5px -4px rgba(0,0,0,0.4),
-              7px 0 5px -4px rgba(0,0,0,0.4),
-              0 10px 5px -4px rgba(0,0,0,0.7),
+              -6px 0 5px -5px rgba(0,0,0,0.4),
+              7px 0 5px -3px rgba(0,0,0,0.4),
+              0 5px 5px -4px rgba(0,0,0,0.7),
               0 -8px 7px -4px rgba(0,0,0,0.7);
 }
 
